# isic-2024-skin-cancer

./: .gitignore  DATA.md  LICENSE  README.md  pyproject.toml
archive/: INDEX.md
archive/01_baselines/: 1_cnn_simplpe_preprocessed_data.ipynb  2_cnn_simplpe_preprocessed_randomaugment.ipynb
archive/02_hybrid/: 3_hybrid_cnn_metadata.ipynb
archive/03_transfer/: 4_hybrid_cnn_metadata_EfficientNet-v2.ipynb  4_hybrid_cnn_metadata_EfficientNet-v2.py  5_hybrid_cnn_metadata_ResNet34.ipynb  5_hybrid_cnn_metadata_ResNet34.py
archive/04_ensemble_kfold/: 1_generate_validation_predictions.py  6_hybrid_cnn_metadata_ensemble.ipynb  7_hybrid_cnn_metadata_TTA.ipynb  8_1_hybrid_cnn_metadata_kfold_ensemble.ipynb  8_hybrid_cnn_metadata_crpss-valid_ensemble.py  9_1_hybrid_cnn_metadata_biggefficient_fix_batch.py  (+1 more)
docs/: architecture-dual-backbone.md  distribution-shift.md  domain-rules.md  explainability.md  generative-augmentation.md  metadata-audit.md  model-evolution.md  scaler-recovery-postmortem.md  skills-map.md  train-inference-mismatch.md
dual_backbone/: 00_prepare_synthetic_metadata.py  01_train.py  02_analyze_training.py  03_generate_submissions.py  README.md  isic_model.py
generative/: README.md  synthetic_metadata_enrichment_stats.json
references/: 1st-place-solution.md
reports/: ERRATA.md  README.md
stacking/: README.md  feature_list.txt
tools/: batch_size_finder.py  check_oof_integrity.py  compare_oofs.py  compare_submissions.py  compute_pauc.py  ensemble_submissions.py  preprocess_hdf5.py  preprocess_hdf5_v2.py  recover_scalers.py  verify_scaler.py
(+97 files in other folders)
