[project]
name = "isic-2024-skin-cancer"
version = "1.0.0"
description = "Malignancy detection on ISIC 2024 dermoscopic images + clinical metadata under extreme class imbalance (~1:1168). Dual-backbone (EVA02 + EdgeNeXt + metadata) and two-stage stacking endgames."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MohammadErfan Jabbari", email = "mohammaderfanjabbari@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    # deep learning / vision
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "timm>=1.0.22",
    "albumentations>=2.0.8",
    "h5py>=3.15.1",
    "pillow>=10.0.0",
    # tabular / classical ML
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
    "lightgbm>=4.6.0",
    "catboost>=1.2.8",
    "optuna>=4.6.0",
    "shap>=0.49.1",
    # generative track
    "diffusers>=0.35.2",
    "transformers>=4.57.1",
    # data / utils / viz
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
]

[project.urls]
Repository = "https://github.com/<your-username>/isic-2024-skin-cancer"

[tool.setuptools]
# This repo is organized as runnable pipeline directories rather than an installed package.
# See README.md §Repository layout. A future `src/isic` package extraction is tracked in docs.
py-modules = []
